debug instrument in Ans-Pl (version 2) (see this: https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_debugger.html)

--- a/ansible-demo/user.yml
+++ b/ansible-demo/user.yml
@@ -9,6 +9,4 @@
         name: "{{ user }}"
         state: present
       become: true  
-      register: out
-    - debug:
-        var: out
+      debugger: always
